@@ -10,8 +10,7 @@
 	<integer>5</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>474</integer>
-		<integer>466</integer>
+		<integer>478</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>9C31</string>
